[metadata]
name = pb-djworkflow
version = 0.1
description = Another django workflow.
long_description = file: README.md
url = https://github.com/gpabois/pb-djworkflow
author = Gaël Pabois
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
package_dir = 
    =src
python_requires = >=3.8
install_requires =
    Django >= 4.2
    graphene_django >= 3.0.0
    graphql_relay >= 3.2.0
    django-filter >= 23.1
    graphene-file-upload >= 1.3.0
    pb-graphene>=0.0.2

[options.packages.find]
where=src